--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
 		"url": "git+https://github.com/n1c01ash/starter.git"
 	},
 	"keywords": [
-		"starter",
-		"js",
-		"sass"
+		"starter"
 	],
 	"author": "Marko Nikolaš",
 	"license": "ISC",
@@ -40,5 +38,6 @@
 		"webpack": "^5.9.0",
 		"webpack-cli": "^4.2.0",
 		"webpack-dev-server": "^3.11.0"
-	}
+	},
+	"dependencies": {}
 }
