--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
 		"url-loader": "^4.1.1",
 		"webpack": "^5.9.0",
 		"webpack-cli": "^4.2.0",
-		"webpack-dev-server": "^3.11.0"
+		"webpack-dev-server": "^3.11.0",
+		"webpack-manifest-plugin": "^3.0.0"
 	},
 	"dependencies": {}
 }
