--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "webpack serve --env NODE_ENV=local --env development --env watch",
-        "build:dev": "webpack --progress --env NODE_ENV=local --env development --progress",
-        "build:prod": "webpack --progress --env NODE_ENV=local --env production --progress"
+        "start": "webpack serve --env development --env watch",
+        "build:dev": "webpack --progress --env development",
+        "build:prod": "webpack --progress --env production",
+        "analyze:dev": "webpack --env development --env analyze",
+        "analyze:prod": "webpack --env production --env analyze"
     },
     "repository": {
         "type": "git",
@@ -37,6 +39,7 @@
         "style-loader": "^2.0.0",
         "url-loader": "^4.1.1",
         "webpack": "^5.9.0",
+        "webpack-bundle-analyzer": "^4.3.0",
         "webpack-cli": "^4.2.0",
         "webpack-dev-server": "^3.11.0",
         "webpack-manifest-plugin": "^3.0.0"
