--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-    "name": "starter",
-    "version": "1.0.0",
-    "description": "Vanilla js starter without frameworks.",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "webpack serve --env development --env watch",
-        "build:dev": "webpack --progress --env development",
-        "build:prod": "webpack --progress --env production",
-        "analyze:dev": "webpack --env development --env analyze",
-        "analyze:prod": "webpack --env production --env analyze"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/n1c01ash/starter.git"
-    },
-    "keywords": [
-        "starter"
-    ],
-    "author": "Marko Nikolaš",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/n1c01ash/starter/issues"
-    },
-    "homepage": "https://github.com/n1c01ash/starter#readme",
-    "devDependencies": {
-        "@babel/core": "^7.12.9",
-        "@babel/preset-env": "^7.12.7",
-        "babel-loader": "^8.2.2",
-        "clean-webpack-plugin": "^3.0.0",
-        "css-loader": "^5.0.1",
-        "file-loader": "^6.2.0",
-        "html-webpack-plugin": "^5.0.0-alpha.14",
-        "image-webpack-loader": "^7.0.1",
-        "mini-css-extract-plugin": "^1.3.1",
-        "sass": "^1.29.0",
-        "sass-loader": "^10.1.0",
-        "style-loader": "^2.0.0",
-        "url-loader": "^4.1.1",
-        "webpack": "^5.9.0",
-        "webpack-bundle-analyzer": "^4.3.0",
-        "webpack-cli": "^4.2.0",
-        "webpack-dev-server": "^3.11.0",
-        "webpack-manifest-plugin": "^3.0.0"
-    },
-    "dependencies": {}
+	"name": "starter",
+	"version": "1.0.0",
+	"description": "Vanilla js starter without frameworks.",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "webpack serve --env development --env watch",
+		"build:dev": "webpack --progress --env development",
+		"build:prod": "webpack --progress --env production",
+		"analyze:dev": "webpack --env development --env analyze",
+		"analyze:prod": "webpack --env production --env analyze"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/n1c01ash/starter.git"
+	},
+	"keywords": [
+		"starter"
+	],
+	"author": "Marko Nikolaš",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/n1c01ash/starter/issues"
+	},
+	"homepage": "https://github.com/n1c01ash/starter#readme",
+	"devDependencies": {
+		"@babel/core": "^7.12.9",
+		"@babel/preset-env": "^7.12.7",
+		"babel-loader": "^8.2.2",
+		"clean-webpack-plugin": "^3.0.0",
+		"css-loader": "^5.0.1",
+		"file-loader": "^6.2.0",
+		"html-webpack-plugin": "^5.0.0-alpha.14",
+		"image-webpack-loader": "^7.0.1",
+		"mini-css-extract-plugin": "^1.3.1",
+		"prettier": "^2.2.1",
+		"sass": "^1.29.0",
+		"sass-loader": "^10.1.0",
+		"style-loader": "^2.0.0",
+		"url-loader": "^4.1.1",
+		"webpack": "^5.9.0",
+		"webpack-bundle-analyzer": "^4.3.0",
+		"webpack-cli": "^4.2.0",
+		"webpack-dev-server": "^3.11.0",
+		"webpack-manifest-plugin": "^3.0.0"
+	},
+	"dependencies": {}
 }
