--- a/.editorconfig
+++ b/.editorconfig
@@ -3,27 +3,22 @@ root = true
 
 # Unix-style newlines with a newline ending every file
 [*]
-end_of_line = lf
+end_of_line = crlf
 insert_final_newline = true
 
-# Matches multiple files with brace expansion notation
 # Set default charset
 [*.js]
 charset = utf-8
 
+# Scripts and assets
 [*.{html,js,sass,css}]
 indent_style = tab
 tab_width = 4
 
-[webpack.config.js]
+# Configuration
+[webpack.config.js, package.json, eslintrc, prettierrc]
 indent_style = tab
 tab_width = 2
-
-# Indentation override for all JS under lib directory
-[lib/**.js, package.json]
-indent_style = tab
-tab_width = 2
-
 
 [*.html]
 insert_final_newline = true
