--- a/.eslintrc
+++ b/.eslintrc
@@ -27,7 +27,7 @@
         "arrow-parens": ["error", "as-needed"],
         "array-bracket-spacing": ["error", "always"],
         "no-extra-parens": ["error", "all"],
-
+        "no-underscore-dangle": ["error", { "allowAfterThis": true }],
         // Best Practices
         "accessor-pairs": [
             "warn",
