--- a/package.json
+++ b/package.json
@@ -48,5 +48,7 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "^3.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash-es": "^4.17.20"
+  }
 }
