--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "babel-loader": "^8.2.2",
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^5.0.1",
+        "css-minimizer-webpack-plugin": "^1.1.5",
         "eslint": "^7.16.0",
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-plugin-import": "^2.22.1",
