--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "@babel/preset-env": "^7.12.7",
         "autoprefixer": "^10.1.0",
         "babel-loader": "^8.2.2",
+        "browser-sync": "^2.26.13",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^5.0.1",
         "css-minimizer-webpack-plugin": "^1.1.5",
