--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "postcss-loader": "^4.1.0",
         "postcss-preset-env": "^6.7.0",
         "prettier": "^2.2.1",
+        "pug-loader": "^2.4.0",
         "sass": "^1.29.0",
         "sass-loader": "^10.1.0",
         "style-loader": "^2.0.0",
@@ -59,6 +60,7 @@
     },
     "dependencies": {
         "lodash-es": "^4.17.20",
-        "normalize.css": "^8.0.1"
+        "normalize.css": "^8.0.1",
+        "pug": "^3.0.0"
     }
 }
