fixed .editorconfig sass conflict

--- a/.editorconfig
+++ b/.editorconfig
@@ -10,9 +10,14 @@ insert_final_newline = true
 [*.js]
 charset = utf-8
 
-# Scripts and assets
-[*.{html,js,sass,css}]
+# # Scripts and assets
+[*.{html,js,css}]
 indent_style = tab
+tab_width = 4
+
+[*.sass]
+indent_style = tab
+indent_width = 4
 tab_width = 4
 
 # Configuration
